metadata/OrgSetup/objects/RateAdjustmentByTerm__c.object
<CustomObject>
	<fullName>RateAdjustmentByTerm__c</fullName>
	<label>RateAdjustmentByTerm</label>
	<pluralLabel>RateAdjustmentByTerms</pluralLabel>
	<sharingModel>Private</sharingModel>
	<nameField>
        <label>RateAdjustmentByTerm Name</label>
        <type>AutoNumber</type>
    </nameField>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RateAdjustmentByTermProduct</relationshipLabel>
        <relationshipName>RateAdjustmentByTermProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierValue__c</fullName>
        <label>TierValue</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
	<fields>
        <fullName>TierType__c</fullName>
        <label>TierType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>